@@ -1,2 +1,4 @@
-W: 22:Concret: Method 'bbbb' is abstract in class 'Abstract' but is not overridden
+R: 22:AbstractB: Abstract class not referenced
+W: 31:Concret: Method 'bbbb' is abstract in class 'Abstract' but is not overridden
+
 
